2010-04-21  Dirk Eddelbuettel  <edd@debian.org>

	* src/MemBuf.cpp: Added #include <string.h> so that even Solaris sees
	  strlen() -- with thanks to Brian Ripley

2010-04-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.cpp: Add #ifdef to Callback code to break on Windows

2010-03-26  Romain Francois <romain@r-enthusiasts.com>

	* src/RInside.h: the Proxy class is moved inside RInside and
  	  parseEval now returns a Proxy so that the proxy class does its job
	  implicitely

	* inst/examples/standard/rinside_sample8.cpp: simplify the example to
	  implicit use of the Proxy class

2010-03-25  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.h: New Proxy class with operator T() to borrow
	  Rcpp's automatic wrappers
	* inst/examples/standard/rinside_sample8.cpp: Use Proxy()

2010-03-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Increase Version: to 0.2.2

	* .Rbuildignore: Added to exclude volatile Doxygen-generated docs
	   from, zip-archives will be made available as for Rcpp

2010-03-20  Dirk Eddelbuettel  <edd@debian.org>

	* R/RInsidePaths.R: Updated to current version of Rcpp's file (minus
	  the cxx0x bits) in order to standardize linking options, with this
	  we now default to static linking on OS X and Windows as Rcpp does.

	* src/RInside.cpp: Use explicit std::string() constructors for all
	  text arguments inside throw() calls (to satisfy the Windows compiler)

2010-03-16  Dirk Eddelbuettel  <edd@debian.org>

	* src/RInside.{h,cpp}: parseEval* function changed slightly so that
	  SEXP parseEval(string) is now preferred, and it as well as
	  void parseEvalQ(string) now throw exceptions; they call the
	  non-throwing older int parseEval(string, SEXP). We changed the
	  parseEvalQ from int to void which is more in-line with it purpose.
	* inst/examples/standard/rinside_sample{2,4,5}.cpp: Adapted
	  accordingly, mostly by removing no-longer-needed error checking
	  and exepction throw which has now move 'up' into RInside.cpp
